--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-        <div class="box is large"></div>
+        <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
